@@ -12,23 +12,41 @@ public class CollectExample {
         totalList.add(new Student("김수영", "여", 87));
         totalList.add(new Student("감자바", "남", 95));
         totalList.add(new Student("오해영", "여", 93));
-        //남학생만 묶어 List 생성
-        /*List<Student> maleList = totalList.stream()
-         .filter(s->s.getSex().equals("남"))
-         .collect(Collectors.toList());*/
-        List<Student> maleList = totalList.stream()
-                .filter(s->s.getSex().equals("남"))
-                .toList();
+
+        List<Student> maleArbitaryList = new ArrayList<>();
+        for (Student student : totalList) {
+            if (student.getSex().equals("남")) {
+                maleArbitaryList.add(student);
+            }
+        }
+        //아마 이렇게 남자학생들만 구했을 것이다.
+
+        // 이번에는 스트림을 써서 만들어보자
+        List<Student> maleStreamCollectorsList = totalList.stream()
+                .filter(s -> s.getSex().equals("남"))
+                .collect(Collectors.toList());
+
+        // 이번에는 스트림을 쓰되 java16부터 지원한 방식인 Collectors를 사용하지 않고 해보자
+        List<Student> maleList = totalList.stream().filter(s -> s.getSex().equals("남")).toList();
+
+        maleList.stream().forEach(s -> System.out.println(s.getName()));
 
         maleList.stream()
-                .forEach(s -> System.out.println(s.getName()));
-        System.out.println();
+                .map(Student::getName)
+                .forEach(System.out::println);
+
+        // 성적으로 내림차순 정렬 후 상위 2명 -> 이러한 방식을 선언전 프로그래밍이라고 한다.
+        List<Student> topList = totalList.stream()
+                .sorted((a, b) -> Integer.compare(b.getScore(), a.getScore()))
+                .limit(2)
+                .toList();
+
         //학생 이름을 키, 학생의 점수를 값으로 갖는 Map 생성
         Map<String, Integer> map = totalList.stream()
                 .collect(
                         Collectors.toMap(
-                                s -> s.getName(), //Student 객체에서 키가 될 부분 리턴
-                                s -> s.getScore() //Student 객체에서 값이 될 부분 리턴
+                                s -> s.getName(),
+                                s -> s.getScore()
                         )
                 );
         System.out.println(map);
